# python-toolbox

./: .gitignore  .pre-commit-config.yaml  README.md  arxiv_paper_downloader.py  chat_with_pdf.py  cidr_calculator.py  conn-ports-scan.py  generate-ss.py  get_ip.py  get_pdf_meta.py  ollama_url_summarizer.py  pyproject.toml  requirements.txt  streamlit_ollama_url_summarizer.py  youtube_video_summarizer.py
.claude/skills/file-changes-tracker/scripts/: list_recent_changes.py
.claude/skills/file-organizer/: validate_skill.py
apps/rag/: Makefile  README.md  ollama_chat_with_pdf.py  ollama_url_summarizer.py  youtube_video_summarizer.py
apps/rag/md-rag-local/: README.md  index_notes.py  rag_app.py  rag_chat.py  watch_notes.py
apps/rag/md-rag-local/notes/: 1.md  2.md
apps/rag/vectors/: chroma.sqlite3
md-rag-local/: README.md  index_notes.py  rag_app.py  rag_chat.py  watch_notes.py
src/: arxiv_paper_downloader.py  cidr_calculator.py  conn-ports-scan.py
