[project]
name = "python-toolbox"
version = "0.1.0"
description = "A collection of small, useful tools written in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.13",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.3",
    "ollama>=0.6.1",
    "openai>=1.99.6",
    "openai-whisper>=20250625",
    "pypdf>=5.6.0",
    "requests>=2.32.5",
    "streamlit>=1.46.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
